Uploaded image for project: 'Qpid Proton'
  1. Qpid Proton
  2. PROTON-800

[Windows C] Reactor test times out

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • proton-0.8
    • proton-0.9
    • proton-c
    • None
    • Windows Server 2012 R2, Visual Studio 2010 x64

    Description

      ctest -VV times out on the reactor test.

      Instrumenting and debugging shows the failure in test_reactor_acceptor

      Running Debug instead of RelWithDebInfo crashes with an AccVio

      >	qpid-protond.dll!pni_iocpdesc_map_get(iocp_t * iocp, unsigned __int64 s)  Line 773 + 0xa bytes	C++
       	qpid-protond.dll!pn_close(pn_io_t * io, unsigned __int64 socket)  Line 350 + 0x16 bytes	C++
       	qpid-protond.dll!pni_acceptor_finalize(pn_selectable_t * sel)  Line 56	C++
       	qpid-protond.dll!pn_selectable_finalize(void * obj)  Line 81	C++
       	qpid-protond.dll!pn_class_decref(const pn_class_t * clazz, void * object)  Line 100	C++
       	qpid-protond.dll!pn_list_finalize(void * object)  Line 205	C++
       	qpid-protond.dll!pn_class_decref(const pn_class_t * clazz, void * object)  Line 100	C++
       	qpid-protond.dll!pn_decref(void * object)  Line 253	C++
       	qpid-protond.dll!pn_reactor_finalize(pn_reactor_t * reactor)  Line 77	C++
       	qpid-protond.dll!pn_reactor_finalize_cast(void * object)  Line 113 + 0x28 bytes	C++
       	qpid-protond.dll!pn_class_decref(const pn_class_t * clazz, void * object)  Line 100	C++
       	qpid-protond.dll!pn_decref(void * object)  Line 253	C++
       	qpid-protond.dll!pn_reactor_free(pn_reactor_t * reactor)  Line 132	C++
       	c-reactor-tests.exe!test_reactor_acceptor()  Line 171	C++
       	c-reactor-tests.exe!main(int argc, char * * argv)  Line 446	C++
       	c-reactor-tests.exe!__tmainCRTStartup()  Line 555 + 0x19 bytes	C
       	c-reactor-tests.exe!mainCRTStartup()  Line 371	C
       	kernel32.dll!00007ff90cc913d2() 	
       	[Frames below may be incorrect and/or missing, no symbols loaded for kernel32.dll]	
       	ntdll.dll!00007ff90e1003c4() 	
      

      Attachments

        Activity

          People

            cliffjansen Clifford Jansen
            chug Charles E. Rolke
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: