PROTON-800: proton-c reactor fixes for Windows, destructor ordering and selectables handling